--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MidjourneyPromptGenerator</title>
+  <meta name="google-site-verification" content="qItbfdGdQI1e2GsIoaFRKd6KPbXjxmA-oO9lr3OGWiY" />
+  <title>Midjourney Prompt Generator</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
